2008-06-12  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-dbus.[ch]: Added a new function to
	convert 'n' items from a GAsyncQueue to a GStrv for sending files
	to the indexer process.
	
	* src/trackerd/tracker-crawler.c: Use the new
	tracker_dbus_async_queue_to_strv() API to generate the GStrv
	instead of using a GPtrArray.
	
	* src/trackerd/tracker-monitor.c: Save the config variable on
	initialisation. 

2008-06-12  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c
	(tracker_indexer_process_files): Queue files that get through DBus
	calls. At the moment we just assume we want the files module.

2008-06-12  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c:
	* src/trackerd/tracker-crawler.c: Change all instances of
	g_strfreev() on dynamically allocated GPtrArrays, since they grow,
	the strings should be freed separately and the array itself after
	that, this is also better than g_strfreev() in case one or the
	other changes to a GSlice implementation.
	
	* src/trackerd/tracker-main.c: 
	* src/trackerd/tracker-monitor.[ch]: Pass the TrackerConfig since
	we need it to know if we shouldn't monitor certain locations.

2008-06-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* svn merge -r 1538:1656 ../xesam-support
 
2008-06-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/trackerd/tracker-xesam-test.c:
	* tests/trackerd/Makefile.am:
	* tests/Makefile.am:
	* configure.ac:

	Added unit test infrastructure for Xesam

2008-06-12  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.c: Always initialise the hash
	tables to avoid errors when we can't contact the HAL DBus service.
	
	* src/trackerd/linux-inotify-syscalls.h: Removed now we don't need
	it thanks to the GIO file monitoring.
	
	* src/trackerd/tracker-crawler.c: Get the locations to crawl from
	the config now and add a default of $HOME. Also added function to